@@ -1,5 +1,5 @@
 /*
-Copyright (c) 2021, MapTiler.com & OpenMapTiles contributors.
+Copyright (c) 2024, MapTiler.com & OpenMapTiles contributors.
 All rights reserved.
 
 Code license: BSD 3-Clause License
@@ -88,6 +88,7 @@ public class Place implements
   Tables.OsmIslandPoint.Handler,
   Tables.OsmIslandPolygon.Handler,
   Tables.OsmCityPoint.Handler,
+  Tables.OsmBoundaryPolygon.Handler,
   OpenMapTilesProfile.FeaturePostProcessor {
 
   /*
@@ -96,8 +97,10 @@ public class Place implements
    * and minimum zoom level to use for those points.
    */
 
-  private static final TreeMap<Double, Integer> ISLAND_AREA_RANKS = new TreeMap<>(Map.of(
-    Double.MAX_VALUE, 3,
+  private static final TreeMap<Double, Integer> AREA_RANKS = new TreeMap<>(Map.of(
+    Double.MAX_VALUE, 1,
+    squareMetersToWorldArea(640_000_000), 2,
+    squareMetersToWorldArea(160_000_000), 3,
     squareMetersToWorldArea(40_000_000), 4,
     squareMetersToWorldArea(15_000_000), 5,
     squareMetersToWorldArea(1_000_000), 6
@@ -232,7 +235,7 @@ public class Place implements
         rank = country.rank;
       }
 
-      rank = Math.max(1, Math.min(6, rank));
+      rank = Math.clamp(rank, 1, 6);
 
       features.point(LAYER_NAME).setBufferPixels(BUFFER_SIZE)
         .putAttrs(names)
@@ -255,8 +258,8 @@ public class Place implements
       NaturalEarthRegion state = states.getOnlyContaining(element.source().worldGeometry().getCentroid());
       if (state != null) {
         var names = OmtLanguageUtils.getNames(element.source().tags(), translations);
-
-        int rank = Math.min(6, Math.max(1, state.rank));
+        
+        int rank = Math.clamp(state.rank, 1, 6);
         int minzoom = rank == 1 ? 2 : Math.max(3, rank - 1);
         features.point(LAYER_NAME).setBufferPixels(BUFFER_SIZE)
           .putAttrs(names)
@@ -277,7 +280,7 @@ public class Place implements
   public void process(Tables.OsmIslandPolygon element, FeatureCollector features) {
     try {
       double area = element.source().area();
-      int rank = ISLAND_AREA_RANKS.ceilingEntry(area).getValue();
+      int rank = AREA_RANKS.ceilingEntry(area).getValue();
       int minzoom = 3 + rank;
 
       features.pointOnSurface(LAYER_NAME).setBufferPixels(BUFFER_SIZE)
@@ -355,6 +358,23 @@ public class Place implements
       feature.setAttr(Fields.CAPITAL, 2);
     } else if ("4".equals(capital)) {
       feature.setAttr(Fields.CAPITAL, 4);
+    }
+  }
+
+  @Override
+  public void process(Tables.OsmBoundaryPolygon element, FeatureCollector features) {
+    try {
+      int rank = AREA_RANKS.ceilingEntry(element.source().area()).getValue();
+      int minzoom = rank <= 4 ? rank + 5 : 10;
+
+      features.pointOnSurface(LAYER_NAME).setBufferPixels(BUFFER_SIZE)
+        .putAttrs(OmtLanguageUtils.getNames(element.source().tags(), translations))
+        .setAttr(OpenMapTilesSchema.Boundary.Fields.CLASS, element.boundary())
+        .setAttr(Fields.RANK, rank)
+        .setMinZoom(minzoom);
+    } catch (GeometryException e) {
+      e.log(stats, "omt_boundary_poly",
+        "Unable to get point for OSM boundary polygon " + element.source().id());
     }
   }
 
